--- a/RACdotcom/Views/Home/Index.cshtml
+++ b/RACdotcom/Views/Home/Index.cshtml
@@ -2,12 +2,33 @@
     ViewBag.Title = "RAC: Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<!-- where is the best place to put this? -->
-<!-- cant be in a partial view, but will it be considered too rendundant to place in every regular view? 
-    
-    ask tomorrow
-    
-    -->
+<div class="col-lg-6 col-md-8 col-sm-9 col-xs-6">
+    <h1>Ryan Alan Compton</h1>
+    <h5><u>Software Developer</u></h5>
+</div>
+<div class="moon col-lg-6 col-md-4 col-sm-3 col-xs-6">
+</div>
+<div class="col-lg-6 col-md-8 col-sm-9 col-xs-10">
+    <p>Welcome to my personal website!</p>
+    <p>
+        &nbsp;&nbsp; I'm a software developer living in Louisville, KY.
+        A graduate of Indiana University Southeast,
+        I am now employed as an IT Intern at <a href="http://public.zirmed.com/" target="_blank">ZirMed</a>'s downtown Louisville
+        office.
+    </p>
+    <p>
+        &nbsp;&nbsp; My computing interests include web applications, competitive
+        programming <a href="https://open.kattis.com/problems" target="_blank">problems</a>, Linux,
+        Bash, learning OpenGL/graphics programming, and many others. I'm also interested in video games,
+        basketball, martial arts, and Louisville Cardinal athletics.
+    </p>
+    <p>
+        &nbsp;&nbsp; Check out the <a id="careerBtn" href="~/Career">Career</a> page for
+        a rundown of my experience with programming and
+        the tools I'm familiar with, as well as the <a id="contactBtn" href="~/Contact">Contact</a> page for
+        ways to track me down!
+    </p>
+</div>
 @section scripts {
     <script>
         (function (helper) {
@@ -15,40 +36,4 @@
                 helper.onready();
             });
         })(clickHelper);
-    </script>
-}
-
-
-<div class="container cloudtext">
-    <div class="row">
-        <div class="col-lg-6 col-md-8 col-sm-9 col-xs-6">
-            <h1>Ryan Alan Compton</h1>
-            <h5><u>Software Developer</u></h5>
-        </div>
-        <div class="moon col-lg-6 col-md-4 col-sm-3 col-xs-6">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-6 col-md-8 col-sm-9 col-xs-10">
-            <p>Welcome to my personal website!</p>
-            <p>
-                &nbsp&nbsp I'm a software developer living in Louisville, KY.
-                A graduate of Indiana University Southeast,
-                I am now employed as an IT Intern at <a href="http://public.zirmed.com/" target="_blank">ZirMed</a>'s downtown Louisville
-                office.
-            </p>
-            <p>
-                &nbsp&nbsp My computing interests include web applications, competitive
-                programming <a href="https://open.kattis.com/problems" target="_blank">problems</a>, Linux,
-                Bash, learning OpenGL/graphics programming, and many others. I'm also interested in video games,
-                basketball, martial arts, and Louisville Cardinal athletics.
-            </p>
-            <p>
-                &nbsp&nbsp Check out the <a id="careerBtn" href="~/Career">Career</a> page for
-                a rundown of my experience with programming and
-                the tools I'm familiar with, as well as the <a id="contactBtn" href="~/Contact">Contact</a> page for
-                ways to track me down!
-            </p>
-        </div>
-    </div>
-</div>
+    </script>}
