--- a/RACdotcom/Views/Shared/_Layout.cshtml
+++ b/RACdotcom/Views/Shared/_Layout.cshtml
@@ -7,13 +7,14 @@
 </head>
 <body>
     @Html.Partial("_HeaderNavBar")
-    @RenderBody()
+    <div class="container cloudtext">
+        @RenderBody()
+    </div>
     @Html.Partial("_CustomFooter")
     @Scripts.Render("~/bundles/jQuery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/customJS")
     <script async src='https://www.google-analytics.com/analytics.js'></script>
-    
     @RenderSection("scripts", required: false)
 </body>
 </html>
