--- a/RACdotcom/Views/Pro/Pro.cshtml
+++ b/RACdotcom/Views/Pro/Pro.cshtml
@@ -28,7 +28,7 @@
             at <a href="https://scholarworks.iu.edu/conferences/index.php/iuurc/iuurc21/paper/view/279" target="_blank">
                 research conferences
             </a> and implemented a genetic algorithm in an attempt to
-            <a href="https://github.com/rye720/GreenMonkeys" target="_blank">simulate population biology</a>.
+            <a href="https://www.youtube.com/watch?v=EzUQLvpWn5Q" target="_blank">simulate population biology</a>.
         </p>
         <p>
             &nbsp;&nbsp;Professionally, I spent a year working with ASP.NET web forms
