--- a/RACdotcom/Views/Shared/_CustomFooter.cshtml
+++ b/RACdotcom/Views/Shared/_CustomFooter.cshtml
@@ -1,4 +1,4 @@
 ﻿<br /><br /><br />
 <div class="customFooter">
-    &nbsp;&copy; Ryan Compton - @DateTime.Now.Year
+    &nbsp;&copy; <a href="http://ryancompton.azurewebsites.net/" target="_blank">Ryan Compton</a> - @DateTime.Now.Year
 </div>
