--- a/RACdotcom/Views/Contact/Contact.cshtml
+++ b/RACdotcom/Views/Contact/Contact.cshtml
@@ -3,13 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h1>Contact Info</h1>
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <p>my projects on <a href="https://github.com/rye720" target="_blank">github</a></p>
-    <p>my <a href="https://www.linkedin.com/in/ryan-compton-662b05110" target="_blank">linkedin</a> profile</p>
-    <p>e-mail me: at my <a href="mailto:racomp01@gmail.com">Gmail</a> or at <a href="mailto:ryan.compton@ZIRMED.com">work</a></p>
-</div>
+<p>my projects on <a href="https://github.com/rye720" target="_blank">github</a></p>
+<p>my <a href="https://www.linkedin.com/in/ryan-compton-662b05110" target="_blank">linkedin</a> profile</p>
+<p>e-mail me: at my <a href="mailto:racomp01@gmail.com">Gmail</a> or at <a href="mailto:ryan.compton@ZIRMED.com">work</a></p>
 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-9">
-    <img class="img-circle smallpic" src="~/Images/ry3working.jpg" alt="me at work">
+    <img id="mypic" class="contactpic img-circle" data-other-src="/Images/necalli.jpg"
+         src="~/Images/ry3working.jpg" alt="Mr. Compton">
 </div>
 @section scripts {
     <script>
