--- a/RACdotcom/Views/Shared/_Layout.cshtml
+++ b/RACdotcom/Views/Shared/_Layout.cshtml
@@ -14,7 +14,16 @@
     @Scripts.Render("~/bundles/jQuery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/customJS")
-    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-77132406-2', 'auto');
+        ga('send', 'pageview');
+    </script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
