--- a/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
+++ b/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
@@ -1,7 +1,21 @@
-﻿    <ul id="customNav" class="topnav">
-        <li id="homeBtn">@Html.ActionLink("Ryan A. Compton", "Index", "Home")</li>
-        <li id="careerBtn">@Html.ActionLink("Career", "Pro", "Pro")</li>
-        <li id="contactBtn">@Html.ActionLink("Contact", "Contact", "Contact")</li>
-        <li id="resumeBtn"><a href="~/Resume/RAC_resume_2017.pdf">Résumé</a></li>
-        <li class="icon"><a id="navToggle" style="font-size:15px;">☰</a></li>
-    </ul>
+﻿<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            @Html.ActionLink("Ryan A. Compton", "Index", "Home", null, new { @class = "navbar-brand" });
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li id="careerBtn">@Html.ActionLink("Career", "Pro", "Pro")</li>
+                <li id="contactBtn">@Html.ActionLink("Contact", "Contact", "Contact")</li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li id="resumeBtn"><a href="~/Resume/RAC_resume_2017.pdf">Résumé <span class="glyphicon glyphicon-send"></span></a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
