--- a/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
+++ b/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Ryan A. Compton", "Index", "Home", null, new { @class = "navbar-brand" });
+            @Html.ActionLink("Ryan A. Compton", "Index", "Home", null, new { @class = "navbar-brand" })
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
