--- a/RACdotcom/Views/Shared/_Layout.cshtml
+++ b/RACdotcom/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body>
     @Html.Partial("_HeaderNavBar")
-    <div class="container cloudtext">
+    <div class="container-fluid cloudtext">
         @RenderBody()
     </div>
     @Html.Partial("_CustomFooter")
