--- a/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
+++ b/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
@@ -14,7 +14,7 @@
                 <li id="contactBtn">@Html.ActionLink("Contact", "Contact", "Contact")</li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li id="resumeBtn"><a href="~/Resume/RAC_resume_2017.pdf">Résumé <span class="glyphicon glyphicon-send"></span></a></li>
+                <li id="resumeBtn"><a href="~/Resume/RyanC_resume_May2017.pdf">Résumé <span class="glyphicon glyphicon-send"></span></a></li>
             </ul>
         </div>
     </div>
